// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default Start Button Snapshot 1`] = `
<a
  className="govuk-button govuk-button--start"
  draggable="false"
  href="/testurl"
  role="button"
>
  Start now
  <svg
    aria-hidden="true"
    className="govuk-button__start-icon"
    focusable="false"
    height="19"
    viewBox="0 0 33 40"
    width="17.5"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h13l20 20-20 20H0l20-20z"
      fill="currentColor"
    />
  </svg>
</a>
`;

exports[`Start Button with default text Snapshot 1`] = `
<a
  className="govuk-button govuk-button--start"
  draggable="false"
  href="/testurl"
  role="button"
>
  Begin a new claim
  <svg
    aria-hidden="true"
    className="govuk-button__start-icon"
    focusable="false"
    height="19"
    viewBox="0 0 33 40"
    width="17.5"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h13l20 20-20 20H0l20-20z"
      fill="currentColor"
    />
  </svg>
</a>
`;
